--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="./css/styles.css" type="text/css"/>
+        <link rel="stylesheet" href="./css/animation/animations.css" type="text/css"/>
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
         <!-- Google Fonts -->
@@ -13,17 +14,20 @@
         <title>Ohmyfood!</title>
     </head>
     <body>
+        <div class="loader">
+            <div class="logo-loader"><img src="./img/logo/Ellipsis-2s-200px.gif" alt="chargement ohmyfood"></div>
+        </div>
         <header class="header">
             <nav>
                 <div class="header__logo">
                     <img src="./img/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" class="header__img"/>
                 </div>
             </nav>
-         </header>
+        </header>
             <main>
-            <section class="localisation">
+            <div class="localisation">
                 <p class="localisation__content"><i class="fa-map-marker-alt fas localisation__icon" aria-hidden="true"></i> Paris, Belleville</p>
-            </section>
+            </div>
             <section class="intro">
                 <h1 class="intro__title">Réservez le menu qui<br>vous convient</h1>
                 <p>Découvrez des restaurants d'exception,<br>séléctionnés par nos soins.</p>
@@ -31,47 +35,89 @@
                     <button>Explorer nos restaurants</button>
                 </div>
             </section>
-            <section>
-                <h2>Fonctionnement</h2>
-                <ol>
-                    <li><i class="fa-mobile-alt fas" aria-hidden="true"></i>Choisissez un restaurant</li>
-                    <li><i class="fa-list-ul fas" aria-hidden="true"></i>Composez votre menu</li>
-                    <li><i class="fa-store fas" aria-hidden="true"></i>Dégustez au restaurant</li>
+            <section class="fonctionnement">
+                <h2 class="fonctionnement__title">Fonctionnement</h2>
+                <ol class="fonctionnement__liste">
+                    <li class="fonctionnement__puces"><span class="fonctionnement__nombre">1</span><i class="fa-mobile-alt fas" aria-hidden="true"></i>Choisissez un restaurant</li>
+                    <li class="fonctionnement__puces"><span class="fonctionnement__nombre">2</span><i class="fa-list-ul fas" aria-hidden="true"></i>Composez votre menu</li>
+                    <li class="fonctionnement__puces"><span class="fonctionnement__nombre">3</span><i class="fa-store fas" aria-hidden="true"></i>Dégustez au restaurant</li>
                 </ol>
             </section>
-            <section>
-                <h2>Restaurants</h2>
-                <div>
-                    <a href="la-palette-du-gout.html">
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
-                        <i class="fa-2x fa-heart fas" aria-hidden="true"></i>
-                    </a>
-                    <a href="la-note-enchantee.html">
-                        <h3>La note enchantée</h3>
-                        <p>Charonne</p>
-                        <i class="fa-2x fa-heart fas" aria-hidden="true"></i>
-                    </a>
-                    <a href="a-la-francaise.html">
-                        <h3>À la française</h3>
-                        <p>Cité Rouge</p>
-                        <i class="fa-2x fa-heart fas" aria-hidden="true"></i>
-                    </a>
-                    <a href="le-delice-des-sens.html">
-                        <h3>Le délice des sens</h3>
-                        <p>Folie-Méricourt</p>
-                        <i class="fa-2x fa-heart fas" aria-hidden="true"></i>
-                    </a>
+            <section class="restaurant">
+                <h2 class="restaurant__title">Restaurants</h2>
+                <div class="restaurant__cartes">
+                    <article class="restaurant__carte">
+                            <a href="la-palette-du-gout.html">
+                                <div class="restaurant__img">
+                                    <img src="./img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La Palette du Goût" class="p-img-bottom">
+                                </div>
+                                <div class="restaurant__footer">
+                                    <h3>La palette du goût</h3>
+                                    <p>Ménilmontant</p>
+                                    <div class="restaurant__coeur">
+                                        <i class="fa-2x fa-heart fa-heart-1 fas" aria-hidden="true"></i>
+                                        <i class="fa-2x fa-heart fa-heart-2 fas" aria-hidden="true"></i>
+                                    </div>
+                                </div>
+                                <div class="restaurant__news">Nouveau</div>
+                            </a>
+                    </article>
+                    <article class="restaurant__carte">
+                        <a href="la-note-enchantee.html">
+                            <div class="restaurant__img">
+                                <img src="./img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La Note Enchantée" class="p-img-custom">
+                            </div>
+                            <div class="restaurant__footer">
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                                <div class="restaurant__coeur">
+                                    <i class="fa-2x fa-heart fa-heart-1 fas" aria-hidden="true"></i>
+                                    <i class="fa-2x fa-heart fa-heart-2 fas" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="restaurant__news">Nouveau</div>
+                        </a>
+                    </article>
+                    <article class="restaurant__carte">
+                        <a href="a-la-francaise.html">
+                            <div class="restaurant__img">
+                                <img src="./img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la Française" class="p-img-bottom">
+                            </div>
+                            <div class="restaurant__footer">
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
+                                <div class="restaurant__coeur">
+                                    <i class="fa-2x fa-heart fa-heart-1 fas" aria-hidden="true"></i>
+                                    <i class="fa-2x fa-heart fa-heart-2 fas" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="restaurant__carte">
+                        <a href="le-delice-des-sens.html">
+                            <div class="restaurant__img">
+                                <img src="./img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le Délice des Sens" class="p-img-bottom">
+                            </div>
+                            <div class="restaurant__footer">
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                                <div class="restaurant__coeur">
+                                    <i class="fa-2x fa-heart fa-heart-1 fas" aria-hidden="true"></i>
+                                    <i class="fa-2x fa-heart fa-heart-2 fas" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </article>
                 </div>
             </section>
             </main>   
-            <footer>
-                <img src="./img/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood"/>
-                <nav>
+            <footer class="footer">
+                <img src="./img/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" class="footer__logo"/>
+                <nav class="footer__links">
                     <a><i class="fa-utensils fas" aria-hidden="true"></i> Proposer un restaurant</a>
                     <a><i class="fa-hands-helping fas" aria-hidden="true"></i> Devenir partenaire</a>
                     <a>Mentions légales</a>
-                    <a>Contact</a>
+                    <a href="mailto:ohmyfood@example.com">Contact</a>
                 </nav>
             </footer>
     </body>
