--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="./css/styles.css" type="text/css"/>
+        <link rel="stylesheet" href="./css/animation/animations.css" type="text/css"/>
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
         <!-- Google Fonts -->
@@ -12,170 +13,168 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
         <title>Ohmyfood! - La Note Enchantée</title>
     </head>
-    
-    <body>
+    <body class="bg-page">
         <header class="header">
             <nav>
                 <div class="header__logo">
-                    <a href="/index.html">
+                    <a href="index.html">
                         <i class="fa-arrow-left fas"></i>
                     </a>
-                    <img src="./img/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood"/>
+                    <img src="./img/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" class="header__img"/>
                 </div>
             </nav>
-         </header>
-         <img src="./img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Bannière La Note Enchantée" class="heroImg">
-         <main class="container menu">
-             <header class="menu__header">
-                 <h2 class="menu__title">La note enchantée</h2>
-                 <button class="menu__btn">
-                     <i class="fa-2x fa-heart far menu__like menu__like--noBg"></i>
-                     <i class="fa-2x fa-heart fas menu__like menu__like--bg"></i>
-                 </button>
-             </header>
-             <div class="submenus">
-                 <section class="submenu">
-                     <h3 class="submenu__title">Entrées</h3>
-                     <section class="delay-0 menuItem">
-                         <header class="menuItem__header">
-                             <h4 class="menuItem__title">Raviole de foie gras</h4>
-                             <p class="menuItem__description">Accompagnés de leur crème à la truffe</p>
-                         </header>
-                         <div class="menuItem__price">25€</div>
-                         <div class="menuItem__confirmation">
-                             <div class="menuItem__wrapIcon">
-                                 <i class="fa-check fas menuItem__icon"></i>
-                             </div>
-                         </div>
-                     </section>
-                     <section class="delay-1 menuItem">
-                         <header class="menuItem__header">
-                             <h4 class="menuItem__title">Caviar osciètre</h4>
-                             <p class="menuItem__description">Sur blini à la farine de blé noir</p>
-                         </header>
-                         <div class="menuItem__price">35€</div>
-                         <div class="menuItem__confirmation">
-                             <div class="menuItem__wrapIcon">
-                                 <i class="fa-check fas menuItem__icon"></i>
-                             </div>
-                         </div>
-                     </section>
-                     <section class="delay-2 menuItem">
-                         <header class="menuItem__header">
-                             <h4 class="menuItem__title">Homard et espuma</h4>
-                             <p class="menuItem__description">Marinés aux zests d'orange</p>
-                         </header>
-                         <div class="menuItem__price">20€</div>
-                         <div class="menuItem__confirmation">
-                             <div class="menuItem__wrapIcon">
-                                 <i class="fa-check fas menuItem__icon"></i>
-                             </div>
-                         </div>
-                     </section>
-                     <section class="delay-2 menuItem">
-                         <header class="menuItem__header">
-                             <h4 class="menuItem__title">Foie gras de canard cuit entier</h4>
-                             <p class="menuItem__description">Confiture de figue et pain toasté</p>
-                         </header>
-                         <div class="menuItem__price">35€</div>
-                         <div class="menuItem__confirmation">
-                             <div class="menuItem__wrapIcon">
-                                 <i class="fa-check fas menuItem__icon"></i>
-                             </div>
-                         </div>
-                     </section>
-                 </section>
-                 <section class="submenu">
-                     <h3 class="submenu__title">Plats</h3>
-                     <section class="delay-3 menuItem">
-                         <header class="menuItem__header">
-                             <h4 class="menuItem__title">Noix de coquilles Saint-Jacques</h4>
-                             <p class="menuItem__description">Sur lit de purée de céleri-rave</p>
-                         </header>
-                         <div class="menuItem__price">40€</div>
-                         <div class="menuItem__confirmation">
-                             <div class="menuItem__wrapIcon">
-                                 <i class="fa-check fas menuItem__icon"></i>
-                             </div>
-                         </div>
-                     </section>
-                     <section class="delay-4 menuItem">
-                         <header class="menuItem__header">
-                             <h4 class="menuItem__title">Langoustine poêlée</h4>
-                             <p class="menuItem__description">Purée de patate douce</p>
-                         </header>
-                         <div class="menuItem__price">35€</div>
-                         <div class="menuItem__confirmation">
-                             <div class="menuItem__wrapIcon">
-                                 <i class="fa-check fas menuItem__icon"></i>
-                             </div>
-                         </div>
-                     </section>
-                     <section class="delay-5 menuItem">
-                         <header class="menuItem__header">
-                             <h4 class="menuItem__title">Mijoté de queue de boeuf</h4>
-                             <p class="menuItem__description">Et riz sauvage aux zestes de citron</p>
-                         </header>
-                         <div class="menuItem__price">44€</div>
-                         <div class="menuItem__confirmation">
-                             <div class="menuItem__wrapIcon">
-                                 <i class="fa-check fas menuItem__icon"></i>
-                             </div>
-                         </div>
-                     </section>
-                 </section>
-                 <section class="submenu">
-                     <h3 class="submenu__title">Desserts</h3>
-                     <section class="delay-6 menuItem">
-                         <header class="menuItem__header">
-                             <h4 class="menuItem__title">Macaron noisette et chocolat</h4>
-                             <p class="menuItem__description">Glace au caramel brun et sel de Guérande</p>
-                         </header>
-                         <div class="menuItem__price">18€</div>
-                         <div class="menuItem__confirmation">
-                             <div class="menuItem__wrapIcon">
-                                 <i class="fa-check fas menuItem__icon"></i>
-                             </div>
-                         </div>
-                     </section>
-                     <section class="delay-7 menuItem">
-                         <header class="menuItem__header">
-                             <h4 class="menuItem__title">Baba au rhum revisité</h4>
-                             <p class="menuItem__description">Avec son coulis de citron</p>
-                         </header>
-                         <div class="menuItem__price">22€</div>
-                         <div class="menuItem__confirmation">
-                             <div class="menuItem__wrapIcon">
-                                 <i class="fa-check fas menuItem__icon"></i>
-                             </div>
-                         </div>
-                     </section>
-                     <section class="delay-8 menuItem">
-                         <header class="menuItem__header">
-                             <h4 class="menuItem__title">Tarte au citron meringuée</h4>
-                             <p class="menuItem__description">Destructurée</p>
-                         </header>
-                         <div class="menuItem__price">23€</div>
-                         <div class="menuItem__confirmation">
-                             <div class="menuItem__wrapIcon">
-                                 <i class="fa-check fas menuItem__icon"></i>
-                             </div>
-                         </div>
-                     </section>
-                 </section>
-             </div>
-             <div class="wrapBtn">
-                 <button class="commandBtn">Commander</button>
-             </div>
-         </main>
-            <footer>
-                <img src="./img/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood"/>
-                <nav>
-                    <a><i class="fa-utensils fas" aria-hidden="true"></i> Proposer un restaurant</a>
-                    <a><i class="fa-hands-helping fas" aria-hidden="true"></i> Devenir partenaire</a>
-                    <a>Mentions légales</a>
-                    <a>Contact</a>
-                </nav>
-            </footer>
+        </header>
+        <img src="./img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Bannière La Note Enchantée" class="ban-page">
+        <main class="menu">
+            <header class="menu__header">
+                <h2 class="menu__title">La note enchantée</h2>
+                <div class="menu__btn">
+                    <i class="fa-heart fa-heart-1--page fas menu__coeur"></i>
+                    <i class="fa-heart fa-heart-2 fas menu__coeur"></i>
+                </div>
+            </header>
+            <div class="menu__details">
+                <div class="details__carte">
+                    <div class="carte__titre">ENTRÉES</div>
+                    <div class="ligne"></div>
+                    <div class="carte__choix choix--1">
+                        <div class="choix">
+                            <div class="choix__nom">Ravioles de foie gras</div>
+                            <div class="choix__details">
+                                <div class="choix__description">Accompagnés de leur crème à la truffe</div>
+                                <div class="choix__prix">25€</div>
+                            </div>
+                            <div class="choix__check">
+                                <div class="check__content"></div>
+                                <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                            </div>
+                        </div>
+                        <div class="choix">
+                            <div class="choix__nom">Caviar osciètre</div>
+                            <div class="choix__details">
+                                <div class="choix__description">Sur blini à la farine de blé noir</div>
+                                <div class="choix__prix">35€</div>
+                            </div>
+                            <div class="choix__check">
+                                <div class="check__content"></div>
+                                <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                            </div>
+                        </div>
+                        <div class="choix">
+                            <div class="choix__nom">Homard et espuma de potiron</div>
+                            <div class="choix__details">
+                                <div class="choix__description">Mariné aux zestes d'orange</div>
+                                <div class="choix__prix">20€</div>
+                            </div>
+                            <div class="choix__check">
+                                <div class="check__content"></div>
+                                <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                            </div>
+                        </div>
+                        <div class="choix">
+                            <div class="choix__nom">Foie gras de canard cuit entier</div>
+                            <div class="choix__details">
+                                <div class="choix__description">Confiture de figue et pain toasté</div>
+                                <div class="choix__prix">35€</div>
+                            </div>
+                            <div class="choix__check">
+                                <div class="check__content"></div>
+                                <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                    <div class="details__carte">
+                        <div class="carte__titre">PLATS</div>
+                        <div class="ligne"></div>
+                        <div class="carte__choix choix--2">
+                            <div class="choix">
+                                <div class="choix__nom">Noix de coquilles Saint-Jacques</div>
+                                <div class="choix__details">
+                                    <div class="choix__description">Sur lit de purée de céleri-rave</div>
+                                    <div class="choix__prix">40€</div>
+                                </div>
+                                <div class="choix__check">
+                                    <div class="check__content"></div>
+                                    <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                                </div>
+                            </div>
+                            <div class="choix">
+                                <div class="choix__nom">Langoustine poêlée</div>
+                                <div class="choix__details">
+                                    <div class="choix__description">Purée de patate douce</div>
+                                    <div class="choix__prix">35€</div>
+                                </div>
+                                <div class="choix__check">
+                                    <div class="check__content"></div>
+                                    <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                                </div>
+                            </div>
+                            <div class="choix">
+                                <div class="choix__nom">Mijoté de queue de boeuf</div>
+                                <div class="choix__details">
+                                    <div class="choix__description">Et riz sauvage aux zestes de citron</div>
+                                    <div class="choix__prix">44€</div>
+                                </div>
+                                <div class="choix__check">
+                                    <div class="check__content"></div>
+                                    <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="details__carte">
+                        <div class="carte__titre">DESSERTS</div>
+                        <div class="ligne"></div>
+                        <div class="carte__choix choix--3">
+                            <div class="choix">
+                                <div class="choix__nom">Macaron noisette et chocolat</div>
+                                <div class="choix__details">
+                                    <div class="choix__description">Glace au caramel brun et sel de Guérande</div>
+                                    <div class="choix__prix">18€</div>
+                                </div>
+                                <div class="choix__check">
+                                    <div class="check__content"></div>
+                                    <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                                </div>
+                            </div>
+                            <div class="choix">
+                                <div class="choix__nom">Baba au rhum revisité </div>
+                                <div class="choix__details">
+                                    <div class="choix__description">Avec son coulis de citron</div>
+                                    <div class="choix__prix">22€</div>
+                                </div>
+                                <div class="choix__check">
+                                    <div class="check__content"></div>
+                                    <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                                </div>
+                            </div>
+                            <div class="choix">
+                                <div class="choix__nom">Tarte au citron meringuée</div>
+                                <div class="choix__details">
+                                    <div class="choix__description">Destructurée</div>
+                                    <div class="choix__prix">23€</div>
+                                </div>
+                                <div class="choix__check">
+                                    <div class="check__content"></div>
+                                    <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+            <div class="menu__button">
+                <button class="commander">Commander</button>
+            </div>
+        </main>
+        <footer class="footer">
+            <img src="./img/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" class="footer__logo"/>
+            <nav class="footer__links">
+                <a><i class="fa-utensils fas" aria-hidden="true"></i> Proposer un restaurant</a>
+                <a><i class="fa-hands-helping fas" aria-hidden="true"></i> Devenir partenaire</a>
+                <a>Mentions légales</a>
+                <a href="mailto:ohmyfood@example.com">Contact</a>
+            </nav>
+        </footer>
     </body>
 </html>
