--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="./css/styles.css" type="text/css"/>
+        <link rel="stylesheet" href="./css/animation/animations.css" type="text/css"/>
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
         <!-- Google Fonts -->
@@ -12,158 +13,157 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
         <title>Ohmyfood! - La Palette du Goût</title>
     </head>
-    
-    <body>
+    <body class="bg-page">
         <header class="header">
             <nav>
                 <div class="header__logo">
-                    <a href="/index.html">
+                    <a href="index.html">
                         <i class="fa-arrow-left fas"></i>
                     </a>
-                    <img src="./img/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood"/>
+                    <img src="./img/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" class="header__img"/>
                 </div>
             </nav>
-         </header>
-         <img src="./img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Bannière La Palette du Goût" class="heroImg">
-         <main class="container menu">
+        </header>
+        <img src="./img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Bannière La Palette du Goût" class="ban-page">
+        <main class="menu">
             <header class="menu__header">
                 <h2 class="menu__title">La palette du goût</h2>
-                <button class="menu__btn">
-                    <i class="fa-2x fa-heart far menu__like menu__like--noBg"></i>
-                    <i class="fa-2x fa-heart fas menu__like menu__like--bg"></i>
-                </button>
+                <div class="menu__btn">
+                    <i class="fa-heart fa-heart-1--page fas menu__coeur"></i>
+                    <i class="fa-heart fa-heart-2 fas menu__coeur"></i>
+                </div>
             </header>
-            <div class="submenus">
-                <section class="submenu">
-                    <h3 class="submenu__title">Entrées</h3>
-                    <section class="delay-0 menuItem">
-                        <header class="menuItem__header">
-                            <h4 class="menuItem__title">Fricassée d'escargot</h4>
-                            <p class="menuItem__description">Au piment d'espelette</p>
-                        </header>
-                        <div class="menuItem__price">25€</div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="fa-check fas menuItem__icon"></i>
+            <div class="menu__details">
+                <div class="details__carte">
+                    <div class="carte__titre">ENTRÉES</div>
+                    <div class="ligne"></div>
+                    <div class="carte__choix choix--1">
+                        <div class="choix">
+                            <div class="choix__nom">Fricassée d'escargot</div>
+                            <div class="choix__details">
+                                <div class="choix__description">Au piment d'espelette </div>
+                                <div class="choix__prix">25€</div>
+                            </div>
+                            <div class="choix__check">
+                                <div class="check__content"></div>
+                                <div class="check__icon"><i class="fas fa-check-circle"></i></div>
                             </div>
                         </div>
-                    </section>
-                    <section class="delay-1 menuItem">
-                        <header class="menuItem__header">
-                            <h4 class="menuItem__title">Foie gras de canard mi-cuit</h4>
-                            <p class="menuItem__description">Et ses copeaux de truffe noire</p>
-                        </header>
-                        <div class="menuItem__price">35€</div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="fa-check fas menuItem__icon"></i>
+                        <div class="choix">
+                            <div class="choix__nom">Foie gras de canard mi-cuit</div>
+                            <div class="choix__details">
+                                <div class="choix__description">Et ses copeaux de truffe noire</div>
+                                <div class="choix__prix">35€</div>
+                            </div>
+                            <div class="choix__check">
+                                <div class="check__content"></div>
+                                <div class="check__icon"><i class="fas fa-check-circle"></i></div>
                             </div>
                         </div>
-                    </section>
-                    <section class="delay-2 menuItem">
-                        <header class="menuItem__header">
-                            <h4 class="menuItem__title">Oeuf au plat</h4>
-                            <p class="menuItem__description">Assaisonné à la truffe sur lit de poireaux</p>
-                        </header>
-                        <div class="menuItem__price">20€</div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="fa-check fas menuItem__icon"></i>
+                        <div class="choix">
+                            <div class="choix__nom">Oeuf au plat</div>
+                            <div class="choix__details">
+                                <div class="choix__description">Assaisonné à la truffe sur lit de caviar</div>
+                                <div class="choix__prix">20€</div>
+                            </div>
+                            <div class="choix__check">
+                                <div class="check__content"></div>
+                                <div class="check__icon"><i class="fas fa-check-circle"></i></div>
                             </div>
                         </div>
-                    </section>
-                </section>
-                <section class="submenu">
-                    <h3 class="submenu__title">Plats</h3>
-                    <section class="delay-3 menuItem">
-                        <header class="menuItem__header">
-                            <h4 class="menuItem__title">Filet de boeuf aux herbes</h4>
-                            <p class="menuItem__description">Accompagné de sa ribambelle de légumes</p>
-                        </header>
-                        <div class="menuItem__price">40€</div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="fa-check fas menuItem__icon"></i>
+                    </div>
+                </div>
+                    <div class="details__carte">
+                        <div class="carte__titre">PLATS</div>
+                        <div class="ligne"></div>
+                        <div class="carte__choix choix--2">
+                            <div class="choix">
+                                <div class="choix__nom">Filet de boeuf aux herbes</div>
+                                <div class="choix__details">
+                                    <div class="choix__description">Accompagné de sa ribambelle de légumes</div>
+                                    <div class="choix__prix">40€</div>
+                                </div>
+                                <div class="choix__check">
+                                    <div class="check__content"></div>
+                                    <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                                </div>
+                            </div>
+                            <div class="choix">
+                                <div class="choix__nom">Parmentier de queue de boeuf</div>
+                                <div class="choix__details">
+                                    <div class="choix__description">À la truffe noire sur sa purée de panais</div>
+                                    <div class="choix__prix">35€</div>
+                                </div>
+                                <div class="choix__check">
+                                    <div class="check__content"></div>
+                                    <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                                </div>
+                            </div>
+                            <div class="choix">
+                                <div class="choix__nom">Filet de turbot</div>
+                                <div class="choix__details">
+                                    <div class="choix__description">Aux agrumes</div>
+                                    <div class="choix__prix">44€</div>
+                                </div>
+                                <div class="choix__check">
+                                    <div class="check__content"></div>
+                                    <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                                </div>
                             </div>
                         </div>
-                    </section>
-                    <section class="delay-4 menuItem">
-                        <header class="menuItem__header">
-                            <h4 class="menuItem__title">Parmentier de queue de boeuf</h4>
-                            <p class="menuItem__description">A la truffe noire sur sa purée de panais</p>
-                        </header>
-                        <div class="menuItem__price">35€</div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="fa-check fas menuItem__icon"></i>
+                    </div>
+                    <div class="details__carte">
+                        <div class="carte__titre">DESSERTS</div>
+                        <div class="ligne"></div>
+                        <div class="carte__choix choix--3">
+                            <div class="choix">
+                                <div class="choix__nom">Paris-Brest</div>
+                                <div class="choix__details">
+                                    <div class="choix__description">Revisité</div>
+                                    <div class="choix__prix">18€</div>
+                                </div>
+                                <div class="choix__check">
+                                    <div class="check__content"></div>
+                                    <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                                </div>
+                            </div>
+                            <div class="choix">
+                                <div class="choix__nom">Macaron au chocolat d'exception </div>
+                                <div class="choix__details">
+                                    <div class="choix__description">Et glace à la vanille de Madagascar</div>
+                                    <div class="choix__prix">22€</div>
+                                </div>
+                                <div class="choix__check">
+                                    <div class="check__content"></div>
+                                    <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                                </div>
+                            </div>
+                            <div class="choix">
+                                <div class="choix__nom">Mousse au chocolat</div>
+                                <div class="choix__details">
+                                    <div class="choix__description">Au piment d'espelette et à la truffe noire</div>
+                                    <div class="choix__prix">23€</div>
+                                </div>
+                                <div class="choix__check">
+                                    <div class="check__content"></div>
+                                    <div class="check__icon"><i class="fas fa-check-circle"></i></div>
+                                </div>
                             </div>
                         </div>
-                    </section>
-                    <section class="delay-5 menuItem">
-                        <header class="menuItem__header">
-                            <h4 class="menuItem__title">Filet de Turbot</h4>
-                            <p class="menuItem__description">Aux agrumes</p>
-                        </header>
-                        <div class="menuItem__price">44€</div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="fa-check fas menuItem__icon"></i>
-                            </div>
-                        </div>
-                    </section>
-                </section>
-                <section class="submenu">
-                    <h3 class="submenu__title">Desserts</h3>
-                    <section class="delay-6 menuItem">
-                        <header class="menuItem__header">
-                            <h4 class="menuItem__title">Paris-Brest</h4>
-                            <p class="menuItem__description">Revisité</p>
-                        </header>
-                        <div class="menuItem__price">18€</div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="fa-check fas menuItem__icon"></i>
-                            </div>
-                        </div>
-                    </section>
-                    <section class="delay-7 menuItem">
-                        <header class="menuItem__header">
-                            <h4 class="menuItem__title">Macaron au chocolat d'exception</h4>
-                            <p class="menuItem__description">Et glace à la vanille de Madagascar</p>
-                        </header>
-                        <div class="menuItem__price">22€</div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="fa-check fas menuItem__icon"></i>
-                            </div>
-                        </div>
-                    </section>
-                    <section class="delay-8 menuItem">
-                        <header class="menuItem__header">
-                            <h4 class="menuItem__title">Mousse au chocolat</h4>
-                            <p class="menuItem__description">Au piment d'espelette et à la truffe noire</p>
-                        </header>
-                        <div class="menuItem__price">23€</div>
-                        <div class="menuItem__confirmation">
-                            <div class="menuItem__wrapIcon">
-                                <i class="fa-check fas menuItem__icon"></i>
-                            </div>
-                        </div>
-                    </section>
-                </section>
+                    </div>
             </div>
-            <div class="wrapBtn">
-                <button class="commandBtn">Commander</button>
+            <div class="menu__button">
+                <button class="commander">Commander</button>
             </div>
         </main> 
-            <footer>
-                <img src="./img/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood"/>
-                <nav>
-                    <a><i class="fa-utensils fas" aria-hidden="true"></i> Proposer un restaurant</a>
-                    <a><i class="fa-hands-helping fas" aria-hidden="true"></i> Devenir partenaire</a>
-                    <a>Mentions légales</a>
-                    <a>Contact</a>
-                </nav>
-            </footer>
+        <footer class="footer">
+            <img src="./img/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" class="footer__logo"/>
+            <nav class="footer__links">
+                <a><i class="fa-utensils fas" aria-hidden="true"></i> Proposer un restaurant</a>
+                <a><i class="fa-hands-helping fas" aria-hidden="true"></i> Devenir partenaire</a>
+                <a>Mentions légales</a>
+                <a href="mailto:ohmyfood@example.com">Contact</a>
+            </nav>
+        </footer>
     </body>
 </html>
